calendar next prev에 따른 날짜변동

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
            <ul id="resultDate"><p></p></ul>
         </div>
         <div class="todoList">
-            <ul class="todoBox"><input type="text"><button>write</button></ul>
+            <ul class="todoBox">
+                <input type="text" placeholder="put your todolist" id="inputBox"><button>write</button></ul>
             <ul class="todoContent">
                <li><p>내용</p><span class="delete">X</span></li>
             </ul>
@@ -27,10 +28,15 @@
             </div>
             <div class="calendarBox">
                 <ul class="calendar_Date">
-                   <li>Dates</li>
+                    <li>Sun</li>
+                    <li>Mon</li>
+                    <li>Tue</li>
+                    <li>Wed</li>
+                    <li>Thu</li>
+                    <li>Fri</li>
+                    <li>Sat</li>
                 </ul>
                 <ul class="calendar_Content">
-                    <li><p></p></li>
                 </ul>
             </div>
         </div>
