날짜 클릭시 왼쪽 달력표시 연동 및 todoList 등록 및 삭제

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </div>
         <div class="todoList">
             <ul class="todoBox">
-                <input type="text" placeholder="put your todolist" id="inputBox"><button>write</button></ul>
+                <input type="text" placeholder="put your todolist" id="inputBox"><button id="inputData">write</button></ul>
             <ul class="todoContent">
-               <li><p>내용</p><span class="delete">X</span></li>
+               <li><p></p><span class="delete"></span></li>
             </ul>
         </div>
     </div>
