--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul class="todoBox">
                 <input type="text" placeholder="put your todolist" id="inputBox"><button id="inputData">write</button></ul>
             <ul class="todoContent">
-               <li><p></p><span class="delete"></span></li>
+               <li><p></p><span></span></li>
             </ul>
         </div>
     </div>
